--- a/packages/stellar-defi-sdk/package.json
+++ b/packages/stellar-defi-sdk/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@crossmint/wallets-sdk": "^0.18.4",
+    "@soroswap/sdk": "^0.3.8",
     "@stellar/stellar-sdk": "^13.1.0"
   },
   "devDependencies": {
