🔧 Update demo app to use Soroswap API key
- Add NEXT_PUBLIC_SOROSWAP_API_KEY to SDK initialization
- Update .env.example files with required Soroswap API key

--- a/apps/demo/.env.local.example
+++ b/apps/demo/.env.local.example
@@ -13,8 +13,8 @@ STELLAR_NETWORK=testnet
 # STELLAR_RPC_URL_TESTNET=https://soroban-testnet.stellar.org
 # STELLAR_RPC_URL_MAINNET=https://soroban.stellar.org
 
-# Soroswap API (optional)
-# SOROSWAP_API_KEY=your_soroswap_api_key
+# Soroswap API (required for DEX operations)
+NEXT_PUBLIC_SOROSWAP_API_KEY=your_soroswap_api_key
 
 # Defindex API (optional)
 # DEFINDEX_API_KEY=your_defindex_api_key
